# workshop-scopitone

./: .gitignore  Combinaison de modèles.ipynb  Entrainement d'un modèle de Machine Learning.ipynb  README.md  pyproject.toml  requirements.txt
detection/: server.py
slides/: slides.tex
style/: server.py
