[tool.poetry]
name = "workshop-scopitone"
version = "0.1.0"
description = "Workshop machine learning & expérimentations créatives"
authors = ["m09 <142691+m09@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
torchvision = "^0.9.0"
jupyter = "^1.0.0"
tqdm = "^4.59.0"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
